[package]
name = "proxy"
authors = ["Jiaxiao Zhou (Mossaka) <duibao55328@gmail.com>"]
description = ""
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
spin-sdk = { git = "https://github.com/Mossaka/spin-rust-sdk-msk", branch = "cloneable-request" }
url = "2.5.2"

[workspace]
