[package]
name = "state-put"
authors = ["Jiaxiao Zhou (Mossaka) <duibao55328@gmail.com>"]
description = ""
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
spin-sdk = "2.2.0"

[workspace]
